# perps-position-management

./: README.md
backend/: .env.dev  Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: dto.rs  errors.rs  handlers.rs  mod.rs  routes.rs  websocket.rs
backend/src/domain/: margin.rs  mod.rs  pnl.rs  position.rs
backend/src/infrastructure/: mod.rs  oracle_client.rs  solana_client.rs
backend/src/services/: liquidation_alert.rs  margin_calculator.rs  mod.rs  on_chain_types.rs  position_manager.rs  position_monitor.rs
backend/tests/: get_private_key_string.rs  position_manager.rs
docs/: api.md  build.md  db.md
position-management-system/: Anchor.toml
position-management-system/programs/position-management-system/: Cargo.toml
position-management-system/programs/position-management-system/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs  utils.rs
position-management-system/tests/: getaccount.ts  position-management-system.ts
